--- a/ShoppingCart/src/main/resources/application.properties
+++ b/ShoppingCart/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ShoppingCart
 #spring.datasource.driver-class-name= com.jdbc.mysql.driver
-spring.datasource.url=jdbc:mysql://localhost:3306/dbecom
+spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart
 spring.datasource.username=root
 spring.datasource.password=root1234
 
