--- a/ShoppingCart/src/main/resources/application.properties
+++ b/ShoppingCart/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.datasource.password=root1234
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.ddl-auto = update
 spring.jpa.generate-ddl = true
-spring.jsp.show-sql = true
-server.port = 9111
+server.port = 9090
+
+spring.security.user.name = rahul
+spring.security.user.password = rahul
